...
        }

        tipLabel.font = AppTheme.scaledFont(size: 11, weight: .medium, textStyle: .caption1)
        tipLabel.adjustsFontForContentSizeCategory = true
        tipLabel.textColor = .tertiaryLabel
        tipLabel.textAlignment = .center
        tipLabel.accessibilityIdentifier = "shortcut-panel-tip"
        contentStack.addArrangedSubview(tipLabel)
        contentStack.setCustomSpacing(12, after: shortcutRows.last?.view ?? titleLabel)

        addSubview(backgroundButton)
        addSubview(panelShadowView)
        panelShadowView.addSubview(materialView)
...
